infrastructure/apps/users-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: users-service
  namespace: mrun-apps
  labels:
    app.kubernetes.io/name: users-service
    app.kubernetes.io/part-of: mrun-platform
    app.kubernetes.io/component: identity


spec:
  replicas: 1


  strategy:
    type: RollingUpdate

#  We Say All Pods have name = users-service those mine Pods
  selector:
    matchLabels:
      app.kubernetes.io/name: users-service


  template:
#    From This Time All Of You Will make pods those name is users-service
    metadata:
      labels:
        app.kubernetes.io/name: users-service
        app.kubernetes.io/part-of: mrun-platform
        app.kubernetes.io/component: identity
    spec:

      serviceAccountName: users-service

      securityContext:
        fsGroup: 1000

      containers:

        - name: users-service

          image: mrun/users-service

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          resources:

            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

          # TODO be careful
#          startupProbe:
#
#            httpGet:
#              path: /health
#              port: 3000
#
#            periodSeconds: 5
#            failureThreshold: 30
#
#          readinessProbe:
#
#            httpGet:
#              path: /health
#              port: 3000
#
#            periodSeconds: 5
#
#          livenessProbe:
#
#            httpGet:
#              path: /health
#              port: 3000
#
#            periodSeconds: 10
