infrastructure/apps/users-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: users-service
  namespace: mrun-apps
  annotations:
    consul.hashicorp.com/service-name: users-service
    consul.hashicorp.com/service-port: "3000"

spec:
  selector:
    app.kubernetes.io/name: users-service
  ports:
    - name: http
      port: 3000
      targetPort: 3000

  type: ClusterIP
